--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "global-energia",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview",
+      "deploy:stage": "netlify deploy --dir=dist --alias=staging",
+      "deploy:prod": "netlify deploy --dir=dist --prod"
+    },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
